# NTO

./: .gitmodules
2021-2022/BD&ML/final/individual/: a.py  b.py  c.py  d.py  e.cpp
2021-2022/BD&ML/final/team/: 967192 copy.ipynb  answer.txt  neural-prophet-solution.ipynb  prophet-solution-best.ipynb  prophet-solution.ipynb  pyproject.toml  solution.ipynb
2021-2022/BD&ML/final/team/data/: train_processed.csv
2021-2022/BD&ML/final/team/solutions/: 152989242.ipynb  153002270.ipynb  153002503.ipynb
2022-2023/BD&ML/: a.py  b.py
2022-2023/i-tour/wave1/: a.py  b.py  c.py
2022-2023/i-tour/wave4/: a.out  a.py  b.py  bfs.cpp  d.py  d_alt.cpp
2022-2023/i-tour/wave5/: a-alt.py  a.out  a.py  b.cpp  b.py  c.py  d.cpp  d.py
