[tool.poetry]
name = "water"
version = "0.1.0"
description = ""
authors = ["AlanTheKnight <51376126+AlanTheKnight@users.noreply.github.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^1.4.2"
ipykernel = "^6.12.1"
autopep8 = "^1.6.0"
matplotlib = "^3.5.1"
scikit-learn = "^1.0.2"
prophet = "^1.0.1"
neuralprophet = "^0.3.2"
PyQt5 = "^5.15.6"
plotly = "^5.7.0"
holidays = "^0.13"
darts = "^0.18.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
